--- a/views/abouts/who-we-are.ejs
+++ b/views/abouts/who-we-are.ejs
@@ -2,8 +2,8 @@
 
 
 <div class="about-intro">
-    <p class="hello">Hello,</p>
-    <p class="info-text">we're ORVANE Digital</p>
+    <p class="hello try">Hello,</p>
+    <p class="info-text">we're ORVANE Digitals</p>
     <p class="info-text-tag">
         We produce immersive digital destinations that amplify voices, 
         turn heads, and wow visitors.
