--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand fs-1" href="/orvane">ORVANE</a>
+    <a class="navbar-brand fs-1" href="/orvane"><i class="fa-brands fa-opera fa-flip" style="color: #FFD43B;"></i></i>&nbsp;ORVANE</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,7 +16,7 @@
           <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
             <li><a class="dropdown-item" href="/about/who-we-are">Who We Are</a></li>
             <li><a class="dropdown-item" href="/about/our-process">Our Process</a></li>
-            <li><a class="dropdown-item" href="/about/terms">Careers</a></li>
+            <li><a class="dropdown-item" href="/about/careers">Careers</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -29,7 +29,7 @@
           <a class="nav-link fs-5" href="#">Employees</a>
         </li>
         <li class="nav-item">
-          <button class="btn Quote-btn">Get a Quote</button>
+          <a href="/orvane/signup"><button class="btn Quote-btn">SignUp</button></a>
         </li>
       </ul>
     </div>
