--- a/views/abouts/process.ejs
+++ b/views/abouts/process.ejs
@@ -8,6 +8,18 @@
     <p>As your creative co-pilots, weʼre with you every step of the way, from initial brainstorming to launch day. Our expert guidance ensures a seamless journey, delivering a custom web development that captivates, engages, and drives results.</p>
 </div>
 
-<div class="process-video">
-    hello
+<div class="process-video" id="process-video" style="height: 200px;width: 200px;">
+     <p style="font-size: 20px;padding-top: 2rem;">Play Video</p> 
+     <video id="video" src="https://youtu.be/xrSZLa14haA?si=THJx2uyh_iU0Ldxp" autoplay></video> 
 </div>
+
+<script>
+    const video = document.getElementById('video');
+  const container = document.getElementsById('process-video');
+
+  container.addEventListener('mouseenter', () => {
+    video.play();
+  });
+
+</script>
+
