--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -2,13 +2,19 @@
     <div class="f-info">
         <div class="f-info-socials">
             <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.instagram.com/abhishek.jawney/?next=%2F"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/abhishek-jevene-2a3b18267/" ><i class="fa-brands fa-linkedin"></i></a>
         </div>
         <div class="f-info-brand">&copy;Orvane Private Limited</div>
-        <div class="f-info-links">
-            <a href="/privacy" style="color: white;">Privacy&nbsp;</a> |
-            <a href="/terms" style="color: white;">&nbsp;Terms</a>
+        <div class="f-info-links mt-1">
+            <a href="/orvane/privacy"  >Privacy&nbsp;</a> |
+            <a href="/orvane/terms" >&nbsp;Terms</a>
         </div>
+        <div class="tc-footer">
+            <p style="color: white;">© <span style="color: white;" id="year"></span> Your Company. All rights reserved.</p>
+        </div>
+        <script>
+            document.getElementById('year').textContent = new Date().getFullYear();
+        </script>
     </div>
 </footer>
