--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -14,8 +14,8 @@
     <p>&nbsp;SEO-Maintainance</p>
   </div>
   <div class="description-btn mt-2">
-    <button class="service-btn"><a>Our Services</a></button>&nbsp;
-    <button class="contact-btn"><a>Contact Us</a></button>
+    <a href="/orvane/services" style="text-decoration: none;"><button class="service-btn">Our Services</button>&nbsp;</a>
+    <a href="/orvane/contact" style="text-decoration: none;color:white;"><button class="contact-btn" style="margin-left: 1rem;">Contact Us</button></a>
   </div>
 </div>
 <div>
