--- a/views/abouts/who-we-are.ejs
+++ b/views/abouts/who-we-are.ejs
@@ -1,30 +1,24 @@
 <% layout("/layouts/boilerplate.ejs") -%>
 
 
-<div class="about-intro">
-    <p class="hello try">Hello,</p>
-    <p class="info-text">we're ORVANE Digitals</p>
-    <p class="info-text-tag">
-        We produce immersive digital destinations that amplify voices, 
+  <div class="about-section">
+    <div class="about-intro">
+      <p class="hello try">Hello,</p>
+      <p class="info-text">we're ORVANE Digitals</p>
+      <p class="info-text-tag">
+        We produce immersive digital destinations that amplify voices,
         turn heads, and wow visitors.
-    </p>
-</div>
+      </p>
+    </div>
 
-
-<div class="about-info">
-    <div class="experience">
+    <div class="about-info">
+      <div class="experience">
         <p class="experience-stats"><b>20+</b></p>
         <p class="experience-info years">Years in business</p>
         <p class="experience-stats"><b>250+</b></p>
         <p class="experience-info">Websites and Project launched</p>
         <p class="experience-stats"><b>350+</b></p>
         <p class="experience-info award">Awards and recognition</p>
+      </div>
     </div>
-</div>
-
-
-
-
-
-
-
+  </div>
