--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,17 +1,26 @@
 <% layout("/layouts/boilerplate.ejs") -%>
 
-<div class="contact">
-    <h1 class="hello try">Hello.</h1>
-    <p class="info-text mt-1" style="width: 50%;">How can we help today ?</p>
-</div>
-
-<div class="about-info">
-    <div class="experience" style="width: 80%;">
-        <p class="info-text-tag" style="font-size: xx-large; font-weight:lighter;margin-top: -10rem;">Ready to transform your brand's digital home ?</p>
-        <hr id="hr">
-        <p class="info-text-tag" style="font-weight: lighter; font-size: large;">CHAT WITH US</p>
-        <a href="tel:+918815950172"><p class="info-text-tag" style="font-weight: lighter; font-size: xx-large; margin-top: -2rem;">213.894.9933<hr></p></a>
-        <a href="mailto:jeveneabhi665@gmail.com"><p class="info-text-tag" style="font-weight: lighter; font-size: xx-large;">hello@orvanedigitals.com<hr></p></a>
+    <div class="contact">
+        <h1 class="hello try">Hello.</h1>
+        <p class="info-text mt-1" style="width: 50%;">How can we help today ?</p>
     </div>
-</div>
 
+    <div class="about-info">
+        <div class="experience" style="width: 80%;">
+            <p class="info-text-tag" style="font-size: xx-large; font-weight:lighter;">Ready to transform your brand's
+                digital home ?</p>
+            <hr id="hr">
+            <p class="info-text-tag" style="font-weight: lighter; font-size: large;">CHAT WITH US</p>
+            <a href="tel:+918815950172">
+                <p class="info-text-tag" style="font-weight: lighter; font-size: xx-large; margin-top: -2rem;">
+                    213.894.9933
+                    <hr>
+                </p>
+            </a>
+            <a href="mailto:jeveneabhi665@gmail.com">
+                <p class="info-text-tag" style="font-weight: lighter; font-size: xx-large;">hello@orvanedigitals.com
+                    <hr>
+                </p>
+            </a>
+        </div>
+    </div>
