--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,9 @@
 <% layout("/layouts/boilerplate.ejs") -%>
 
-<div class="row">
-    <div class="alert alert-danger col-4 offset-3 mt-4" role="alert" style="background-color: rgb(214, 30, 30);">
-        <h5 style="color: white;"><%=message%></h5>
+    <div class="row">
+        <div class="alert alert-danger col-4 offset-3 mt-4" role="alert" style="background-color: rgb(205, 54, 54);">
+            <h5 style="color: white;">
+                <%=message%>
+            </h5>
+        </div>
     </div>
-</div>
